upgrade Go libs and enable DEMO mode

--- a/src/main/g8/be-api/config/conf.d/db_gvabe.conf
+++ b/src/main/g8/be-api/config/conf.d/db_gvabe.conf
@@ -14,12 +14,21 @@ gvabe {
       directory = "./data/sqlite"
       dbname = "gvabe"
     }
+
     ## PostgreSQL configurations
     # note: use driver github.com/jackc/pgx/v4/stdlib
     pgsql {
       # override this setting with env DB_PGSQL_URL
       url = "postgres://test:test@localhost:5432/test?sslmode=disable&client_encoding=UTF-8&application_name=gva"
       url = ${?DB_PGSQL_URL}
+    }
+
+    ## MySQL configurations
+    # note: use driver github.com/go-sql-driver/mysql
+    mysql {
+      # override this setting with env DB_MYSQL_URL
+      url = "test:test@tcp(localhost:3306)/test?charset=utf8mb4,utf8&parseTime=true&loc=${timezone}"
+      url = ${?DB_MYSQL_URL}
     }
 
     ## Azure Cosmos DB configurations
@@ -35,8 +44,8 @@ gvabe {
     dynamodb {
       # override these settings with env DB_DYNAMODB_REGION and DB_DYNAMODB_ENDPOINT
       region = "ap-southeast-1"
-      endpoint = "http://localhost:8000"
       region = ${?DB_DYNAMODB_REGION}
+      endpoint = "http://localhost:8000"
       endpoint = ${?DB_DYNAMODB_ENDPOINT}
     }
 
@@ -45,8 +54,8 @@ gvabe {
     mongodb {
       # override these settings with env DB_MONGODB_DB and DB_MONGODB_URL
       db = "test"
-      url = "mongodb://root:test@localhost:27017/admin?replicaSet=replicaset&w=majority&retryWrites=true"
       db = ${?DB_MONGODB_DB}
+      url = "mongodb://root:test@localhost:27017/admin?replicaSet=replicaset&w=majority&retryWrites=true"
       url = ${?DB_MONGODB_URL}
     }
   }
