update azure pipelines

--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -39,6 +39,8 @@ variables:
     value: govueadmin-demo
   - name: govueadminVersion
     value: '0.4.0'
+  - name: goTestPath
+    value: './src/gvabe/bov2/user ./src/gvabe/bov2/blog'
   - group: Release # merge with ADO env group named 'Release'
 
 stages:
@@ -62,6 +64,10 @@ stages:
         g8 new --no-inputs file://$(System.DefaultWorkingDirectory)
       displayName: Generate project using go-giter8
       workingDirectory: $(sessionDirectory)
+    - task: NodeTool@0
+      displayName: Prepare NodeJs env
+      inputs:
+        versionSpec: '$(nodejsVersion)'
     - task: Npm@1
       displayName: 'FE: npm install'
       inputs:
@@ -76,49 +82,24 @@ stages:
     - script: cd $(projectDirectory)/be-api && go build -o $(goBuiltAppName) -tags netgo -a
       displayName: 'BE: go build'
 
-# - stage: build
-#   displayName: Build project
-#   jobs:
-#   - job: build
-#     displayName: Build project
-#     steps:
-#     - task: GoTool@0
-#       displayName: Prepare Go env
-#       inputs:
-#         version: '$(goVersion)'
-#     - task: Go@0
-#       inputs:
-#         # minimum go-giter8 v0.5.1 for "quiet" mode
-#         command: 'get'
-#         arguments: 'github.com/btnguyen2k/go-giter8/g8@v0.5.1'
-#       displayName: Install go-giter8
-#     - task: NodeTool@0
-#       displayName: Prepare NodeJs env
-#       inputs:
-#         versionSpec: '$(nodejsVersion)'
-#     - task: DockerInstaller@0
-#       displayName: Prepare Docker CLI
-#       inputs:
-#         dockerVersion: '$(dockerVersion)'
-#         releaseType: 'stable'
-#     - script: |
-#         g8 --version
-#         g8 new --no-inputs file://$(System.DefaultWorkingDirectory)
-#       displayName: Generate project from g8 template
-#       workingDirectory: $(sessionDirectory)
-#     - task: Npm@1
-#       displayName: 'FE: npm install'
-#       inputs:
-#         command: install
-#         workingDir: '$(projectDirectory)/fe-gui'
-#     - task: Npm@1
-#       displayName: 'FE: npm run build'
-#       inputs:
-#         command: custom
-#         customCommand: 'run build'
-#         workingDir: '$(projectDirectory)/fe-gui'
-#     - script: cd $(projectDirectory)/be-api && go build -o $(goBuiltAppName) -tags netgo -a
-#       displayName: 'BE: go build'
+- stage: test
+  displayName: Run tests
+  dependsOn: generate_and_build
+  jobs:
+  - job: test_sqlite
+    displayName: Run tests against SQLite
+    steps:
+    - task: GoTool@0
+      displayName: Prepare Go env
+      inputs:
+        version: '$(goVersion)'
+    - script: |
+        export PWD=$(pwd)
+        mkdir -p $PWD/temp
+        export SQLITE_DRIVER="sqlite3"
+        export SQLITE_URL="$PWD/temp/temp.db"
+        cd $(System.DefaultWorkingDirectory)/src/main/g8/be-api && go test -v -p 1 -count 1 $(goTestPath)
+      displayName: Run tests against SQLite
 
 # - stage: test
 #   displayName: Run tests
