--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -100,6 +100,46 @@ stages:
         export SQLITE_URL="$PWD/temp/temp.db"
         cd $(System.DefaultWorkingDirectory)/src/main/g8/be-api && go test -v -p 1 -count 1 $(goTestPath)
       displayName: Run tests against SQLite
+  - job: test_pgsql
+    displayName: Run tests against PostgreSQL
+    steps:
+    - task: GoTool@0
+      displayName: Prepare Go env
+      inputs:
+        version: '$(goVersion)'
+    - script: |
+        docker run -d --rm --name postgres -e POSTGRES_DB=test -e POSTGRES_USER=test -e POSTGRES_PASSWORD=test -p 5432:5432 postgres:11
+        sleep 5
+      displayName: Start PostgreSQL server
+    - script: |
+        export TIMEZONE="Asia/Ho_Chi_Minh"
+        export PGSQL_DRIVER="pgx"
+        export PGSQL_URL="postgres://test:test@localhost:5432/test?sslmode=disable&client_encoding=UTF-8&application_name=goadmin"
+        cd $(System.DefaultWorkingDirectory)/src/main/g8/be-api && go test -v -p 1 -count 1 $(goTestPath)
+      displayName: Run tests against PostgreSQL
+  - job: test_mysql
+    displayName: Run tests against MySQL
+    steps:
+    - task: GoTool@0
+      displayName: Prepare Go env
+      inputs:
+        version: '$(goVersion)'
+    - script: |
+        docker run -d --rm --name mysql -e MYSQL_ROOT_PASSWORD=test -e MYSQL_DATABASE=test -e MYSQL_USER=test -e MYSQL_PASSWORD=test -p 3306:3306 mysql:8
+        sleep 5
+      displayName: Start MySQL server
+    - script: |
+        export TIMEZONE="Asia/Ho_Chi_Minh"
+        export MYSQL_DRIVER="mysql"
+        export MYSQL_URL="test:test@tcp(localhost:3306)/test?charset=utf8mb4,utf8&parseTime=true&loc=\${loc}"
+        cd $(System.DefaultWorkingDirectory)/src/main/g8/be-api && go test -v -p 1 -count 1 $(goTestPath)
+      displayName: Run tests against MySQL (parseTime=true)
+    - script: |
+        export TIMEZONE="Asia/Ho_Chi_Minh"
+        export MYSQL_DRIVER="mysql"
+        export MYSQL_URL="test:test@tcp(localhost:3306)/test?charset=utf8mb4,utf8&parseTime=false&loc=\${loc}"
+        cd $(System.DefaultWorkingDirectory)/src/main/g8/be-api && go test -v -p 1 -count 1 $(goTestPath)
+      displayName: Run tests against MySQL (parseTime=false)
 
 # - stage: test
 #   displayName: Run tests
