--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -174,42 +174,30 @@ stages:
         export MONGO_URL="mongodb://root:test@localhost:27017/?authSource=admin&replicaSet=replicaset"
         cd $(System.DefaultWorkingDirectory)/src/main/g8/be-api && go test -v -p 1 -count 1 $(goTestPath)
       displayName: Run tests against MongoDB (replicaset)
+  - job: test_aws_dynamodb
+    displayName: Run tests against AWS DynamoDB
+    steps:
+    - task: GoTool@0
+      displayName: Prepare Go env
+      inputs:
+        version: '$(goVersion)'
+    - script: |
+        docker run -d --rm --name dynamodb -p 8000:8000 amazon/dynamodb-local -jar DynamoDBLocal.jar -inMemory -sharedDb
+        sleep 5
+      displayName: Start PostgreSQL server
+    - script: |
+        export TIMEZONE="Asia/Ho_Chi_Minh"
+        export AWS_REGION="us-west-2"
+        export AWS_ACCESS_KEY_ID="DUMMY"
+        export AWS_SECRET_ACCESS_KEY="DUMMY"
+        export AWS_DYNAMODB_ENDPOINT="http://localhost:8000"
+        cd $(System.DefaultWorkingDirectory)/src/main/g8/be-api && go test -v -p 1 -count 1 $(goTestPath)
+      displayName: Run tests against AWS DynamoDB
 
 # - stage: test
 #   displayName: Run tests
 #   dependsOn: build
 #   jobs:
-#   # - job: test_azure_cosmosdb
-#   #   displayName: Run tests against Azure Cosmos DB
-#   #   steps:
-#   #   - task: GoTool@0
-#   #     displayName: Prepare Go env
-#   #     inputs:
-#   #       version: '$(goVersion)'
-#   #   - task: Go@0
-#   #     inputs:
-#   #       # minimum go-giter8 v0.5.1 for "quiet" mode
-#   #       command: 'get'
-#   #       arguments: 'github.com/btnguyen2k/go-giter8/g8@v0.5.1'
-#   #     displayName: Install go-giter8
-#   #   - script: g8 new --no-inputs file://$(System.DefaultWorkingDirectory)
-#   #     displayName: Generate project from g8 template
-#   #     workingDirectory: $(sessionDirectory)
-#   #   - task: DockerInstaller@0
-#   #     displayName: Prepare Docker CLI
-#   #     inputs:
-#   #       dockerVersion: '$(dockerVersion)'
-#   #       releaseType: 'stable'
-#   #   - script: |
-#   #       docker run -d --rm --name cosmosdb -p 8081:8081 -p 10251:10251 -p 10252:10252 -p 10253:10253 -p 10254:10254 -e AZURE_COSMOS_EMULATOR_PARTITION_COUNT=4 -e AZURE_COSMOS_EMULATOR_ENABLE_DATA_PERSISTENCE=false mcr.microsoft.com/cosmosdb/linux/azure-cosmos-emulator
-#   #       sleep 60
-#   #       export CODECOV_TOKEN=$(CODECOV_TOKEN)
-#   #       export COSMOSDB_DRIVER="gocosmos"
-#   #       export COSMOSDB_URL="AccountEndpoint=https://localhost:8081/;AccountKey=C2y6yDjf5/R+ob0N8A7Cgv30VRDJIWEHLM+4QDU5DE2nQ9nDuVTqobD4b8mGGyPMbIZnqyMsEcaGQy67XIw/Jw==;Db=gva;InsecureSkipVerify=true"
-#   #       cd $(projectDirectory)/be-api \
-#   #         && go test -p 1 -v -cover -coverprofile=coverage.txt -count 1 ./src/gvabe/bov2/user ./src/gvabe/bov2/blog \
-#   #         && bash <(curl -s https://codecov.io/bash) -cF cosmosdb
-#   #     displayName: 'BE: Run tests against Azure Cosmos DB'
 #   - job: test_azure_cosmosdb
 #     displayName: Run tests against Azure Cosmos DB
 #     pool:
@@ -253,101 +241,6 @@ stages:
 #         go test -p 1 -v -cover -coverprofile=coverage.txt -count 1 ./src/gvabe/bov2/user ./src/gvabe/bov2/blog
 #         codecov -cF cosmosdb
 #       displayName: 'BE: Run tests against Azure Cosmos DB'
-#   - job: test_aws_dynamodb
-#     displayName: Run tests against AWS DynamoDB
-#     steps:
-#     - task: GoTool@0
-#       displayName: Prepare Go env
-#       inputs:
-#         version: '$(goVersion)'
-#     - task: Go@0
-#       inputs:
-#         # minimum go-giter8 v0.5.1 for "quiet" mode
-#         command: 'get'
-#         arguments: 'github.com/btnguyen2k/go-giter8/g8@v0.5.1'
-#       displayName: Install go-giter8
-#     - script: g8 new --no-inputs file://$(System.DefaultWorkingDirectory)
-#       displayName: Generate project from g8 template
-#       workingDirectory: $(sessionDirectory)
-#     - task: DockerInstaller@0
-#       displayName: Prepare Docker CLI
-#       inputs:
-#         dockerVersion: '$(dockerVersion)'
-#         releaseType: 'stable'
-#     - script: |
-#         docker run -d --rm --name dynamodb -p 8000:8000 amazon/dynamodb-local -jar DynamoDBLocal.jar -inMemory -sharedDb
-#         sleep 5
-#         export CODECOV_TOKEN=$(CODECOV_TOKEN)
-#         export AWS_REGION="us-west-2"
-#         export AWS_ACCESS_KEY_ID="DUMMY"
-#         export AWS_SECRET_ACCESS_KEY="DUMMY"
-#         export AWS_DYNAMODB_ENDPOINT="http://localhost:8000"
-#         cd $(projectDirectory)/be-api \
-#           && go test -p 1 -v -cover -coverprofile=coverage.txt -count 1 ./src/gvabe/bov2/user ./src/gvabe/bov2/blog \
-#           && bash <(curl -s https://codecov.io/bash) -cF dynamodb
-#       displayName: 'BE: Run tests against AWS DynamoDB'
-#   - job: test_pgsql
-#     displayName: Run tests against PostgreSQL
-#     steps:
-#     - task: GoTool@0
-#       displayName: Prepare Go env
-#       inputs:
-#         version: '$(goVersion)'
-#     - task: Go@0
-#       inputs:
-#         # minimum go-giter8 v0.5.1 for "quiet" mode
-#         command: 'get'
-#         arguments: 'github.com/btnguyen2k/go-giter8/g8@v0.5.1'
-#       displayName: Install go-giter8
-#     - script: g8 new --no-inputs file://$(System.DefaultWorkingDirectory)
-#       displayName: Generate project from g8 template
-#       workingDirectory: $(sessionDirectory)
-#     - task: DockerInstaller@0
-#       displayName: Prepare Docker CLI
-#       inputs:
-#         dockerVersion: '$(dockerVersion)'
-#         releaseType: 'stable'
-#     - script: |
-#         docker run -d --rm --name postgres -e POSTGRES_DB=test -e POSTGRES_USER=test -e POSTGRES_PASSWORD=test -p 5432:5432 postgres:11
-#         sleep 5
-#         export CODECOV_TOKEN=$(CODECOV_TOKEN)
-#         export PGSQL_DRIVER="pgx"
-#         export PGSQL_URL="postgres://test:test@localhost:5432/test?sslmode=disable&client_encoding=UTF-8&application_name=gva"
-#         cd $(projectDirectory)/be-api \
-#           && go test -p 1 -v -cover -coverprofile=coverage.txt -count 1 ./src/gvabe/bov2/user ./src/gvabe/bov2/blog \
-#           && bash <(curl -s https://codecov.io/bash) -cF pgsql
-#       displayName: 'BE: Run tests against PostgreSQL'
-#   - job: test_sqlite
-#     displayName: Run tests against SQLite
-#     steps:
-#     - task: GoTool@0
-#       displayName: Prepare Go env
-#       inputs:
-#         version: '$(goVersion)'
-#     - task: Go@0
-#       inputs:
-#         # minimum go-giter8 v0.5.1 for "quiet" mode
-#         command: 'get'
-#         arguments: 'github.com/btnguyen2k/go-giter8/g8@v0.5.1'
-#       displayName: Install go-giter8
-#     - script: g8 new --no-inputs file://$(System.DefaultWorkingDirectory)
-#       displayName: Generate project from g8 template
-#       workingDirectory: $(sessionDirectory)
-#     - task: DockerInstaller@0
-#       displayName: Prepare Docker CLI
-#       inputs:
-#         dockerVersion: '$(dockerVersion)'
-#         releaseType: 'stable'
-#     - script: |
-#         export CODECOV_TOKEN=$(CODECOV_TOKEN)
-#         export PWD=$(pwd)
-#         mkdir $PWD/temp
-#         export SQLITE_DRIVER="sqlite3"
-#         export SQLITE_URL="$PWD/temp/temp.db"
-#         cd $(projectDirectory)/be-api \
-#           && go test -p 1 -v -cover -coverprofile=coverage.txt -count 1 ./src/gvabe/bov2/user ./src/gvabe/bov2/blog \
-#           && bash <(curl -s https://codecov.io/bash) -cF sqlite
-#       displayName: 'BE: Run tests against SQLite'
 
 # - stage: deploy_heroku
 #   displayName: Build image and deploy to Heroku
