update azure pipelines

--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -193,54 +193,30 @@ stages:
         export AWS_DYNAMODB_ENDPOINT="http://localhost:8000"
         cd $(System.DefaultWorkingDirectory)/src/main/g8/be-api && go test -v -p 1 -count 1 $(goTestPath)
       displayName: Run tests against AWS DynamoDB
+  - job: test_azure_cosmosdb
+    displayName: Run tests against Azure Cosmos DB
+    pool:
+      vmImage: 'windows-latest'
+    steps:
+    - task: GoTool@0
+      displayName: Prepare Go env
+      inputs:
+        version: '$(goVersion)'
+    - script: |
+        REM "Azure CosmosDb Emulator will be installed to C:\Program Files\Azure Cosmos DB Emulator\"
+        REM choco install -y azure-cosmosdb-emulator
+        powershell "& \"C:\Program Files\Azure Cosmos DB Emulator\Microsoft.Azure.Cosmos.Emulator.exe\""
+        powershell -command start-Sleep -s 90
+        powershell try { Invoke-RestMethod -Method GET https://127.0.0.1:8081/ } catch {}
+        powershell netstat -nt
+        set COSMOSDB_DRIVER='gocosmos'
+        set COSMOSDB_URL='AccountEndpoint=https://localhost:8081/;AccountKey=C2y6yDjf5/R+ob0N8A7Cgv30VRDJIWEHLM+4QDU5DE2nQ9nDuVTqobD4b8mGGyPMbIZnqyMsEcaGQy67XIw/Jw==;Db=gva'
+        set TIMEZONE='Asia/Ho_Chi_Minh'
+        cd $(System.DefaultWorkingDirectory)/src/main/g8/be-api
+        go test -v -p 1 -count 1 $(goTestPath)
+        REM go test -p 1 -v -cover -coverprofile=coverage.txt -count 1 ./src/gvabe/bov2/user ./src/gvabe/bov2/blog
+      displayName: Run tests against Azure Cosmos DB
 
-# - stage: test
-#   displayName: Run tests
-#   dependsOn: build
-#   jobs:
-#   - job: test_azure_cosmosdb
-#     displayName: Run tests against Azure Cosmos DB
-#     pool:
-#       #vmImage: 'vs2017-win2016'
-#       vmImage: 'windows-latest'
-#     steps:
-#     - task: GoTool@0
-#       displayName: Prepare Go env
-#       inputs:
-#         version: '$(goVersion)'
-#     - task: Go@0
-#       inputs:
-#         # minimum go-giter8 v0.5.1 for "quiet" mode
-#         command: 'get'
-#         arguments: 'github.com/btnguyen2k/go-giter8/g8@v0.5.1'
-#       displayName: Install go-giter8
-#     - script: |
-#         echo "Normalizing directory path"
-#         set d=file://$(System.DefaultWorkingDirectory)
-#         set d=%d:\=/%
-#         g8 new --no-inputs --verbose %d%
-#       displayName: Generate project from g8 template
-#       workingDirectory: $(sessionDirectory)
-#     - script: |
-#         echo "Azure CosmosDb Emulator will be installed to C:\Program Files\Azure Cosmos DB Emulator\"
-#         echo choco install -y azure-cosmosdb-emulator
-#         powershell "& \"C:\Program Files\Azure Cosmos DB Emulator\Microsoft.Azure.Cosmos.Emulator.exe\""
-#         choco install codecov
-#         powershell -command start-Sleep -s 90
-#         powershell try { Invoke-RestMethod -Method GET https://127.0.0.1:8081/ } catch {}
-#         powershell netstat -nt
-#         echo $env:COSMOSDB_DRIVER='gocosmos'
-#         echo $env:COSMOSDB_URL='AccountEndpoint=https://localhost:8081/;AccountKey=C2y6yDjf5/R+ob0N8A7Cgv30VRDJIWEHLM+4QDU5DE2nQ9nDuVTqobD4b8mGGyPMbIZnqyMsEcaGQy67XIw/Jw==;Db=gva'
-#         echo $env:TIMEZONE='Asia/Ho_Chi_Minh'
-#         echo $env:CODECOV_TOKEN='$(CODECOV_TOKEN)'
-#         set COSMOSDB_DRIVER='gocosmos'
-#         set COSMOSDB_URL='AccountEndpoint=https://localhost:8081/;AccountKey=C2y6yDjf5/R+ob0N8A7Cgv30VRDJIWEHLM+4QDU5DE2nQ9nDuVTqobD4b8mGGyPMbIZnqyMsEcaGQy67XIw/Jw==;Db=gva'
-#         set TIMEZONE='Asia/Ho_Chi_Minh'
-#         set CODECOV_TOKEN='$(CODECOV_TOKEN)'
-#         cd $(projectDirectory)/be-api
-#         go test -p 1 -v -cover -coverprofile=coverage.txt -count 1 ./src/gvabe/bov2/user ./src/gvabe/bov2/blog
-#         codecov -cF cosmosdb
-#       displayName: 'BE: Run tests against Azure Cosmos DB'
 
 # - stage: deploy_heroku
 #   displayName: Build image and deploy to Heroku
