--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -210,7 +210,7 @@ stages:
         powershell try { Invoke-RestMethod -Method GET https://127.0.0.1:8081/ } catch {}
         powershell netstat -nt
         set COSMOSDB_DRIVER='gocosmos'
-        set COSMOSDB_URL='AccountEndpoint=https://localhost:8081/;AccountKey=C2y6yDjf5/R+ob0N8A7Cgv30VRDJIWEHLM+4QDU5DE2nQ9nDuVTqobD4b8mGGyPMbIZnqyMsEcaGQy67XIw/Jw==;Db=gva'
+        set COSMOSDB_URL='AccountEndpoint=https://localhost:8081/;AccountKey=C2y6yDjf5/R+ob0N8A7Cgv30VRDJIWEHLM+4QDU5DE2nQ9nDuVTqobD4b8mGGyPMbIZnqyMsEcaGQy67XIw/Jw==;InsecureSkipVerify=true'
         set TIMEZONE='Asia/Ho_Chi_Minh'
         cd $(System.DefaultWorkingDirectory)/src/main/g8/be-api
         go test -v -p 1 -count 1 $(goTestPath)
