update azure pipelines

--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -216,6 +216,57 @@ stages:
         go test -v -p 1 -count 1 $(goTestPath)
       displayName: Run tests against Azure Cosmos DB
 
+- stage: build_dockerhub
+  displayName: Build image and publish to Docker Hub
+  dependsOn: test
+  #condition: eq(variables['branchDemoBuildChanged'], true)
+  jobs:
+  - job: generate_build_publish
+    displayName: Generate project, build Docker image and publish
+    steps:
+    - task: GoTool@0
+      displayName: Prepare Go env
+      inputs:
+        version: '$(goVersion)'
+    - script: |
+        APP_VERSION='$(govueadminVersion)'
+        echo '##vso[task.setvariable variable=APP_VERSION]'$APP_VERSION
+        APP_VERSION_BUILD=${APP_VERSION}-b$(Build.BuildId)
+        echo '##vso[task.setvariable variable=APP_VERSION_BUILD]'$APP_VERSION_BUILD
+        sed -i 's/version\s*=.*$/version = ${APP_VERSION_BUILD}/' ./src/main/g8/default.properties
+      displayName: Init app name, version and build id
+    - task: Go@0
+      inputs:
+        # minimum go-giter8 v0.5.1 for "quiet" mode
+        command: 'get'
+        arguments: 'github.com/btnguyen2k/go-giter8/g8@v$(gogiter8Version)'
+      displayName: Install go-giter8
+    - script: |
+        g8 new --no-inputs file://$(System.DefaultWorkingDirectory)
+        echo swapping directories...
+        rm -rf $(System.DefaultWorkingDirectory)/*
+        cp -r $(projectDirectory)/* $(System.DefaultWorkingDirectory)/
+      displayName: Generate project using go-giter8
+      workingDirectory: $(sessionDirectory)
+    - task: DockerInstaller@0
+      displayName: Prepare Docker CLI
+      inputs:
+        dockerVersion: '$(dockerVersion)'
+        releaseType: 'stable'
+    - task: Docker@2
+      displayName: Build and Publish Docker image
+      inputs:
+        command: buildAndPush
+        containerRegistry: '$(DockerRegistry)'
+        repository: '$(DockerRegistryAccount)/$(dockerHubRepoName)'
+        tags: |
+          $(APP_VERSION)
+          $(APP_VERSION_BUILD)
+          latest
+    - script: |
+        echo '##vso[task.setvariable variable=APP_VERSION_BUILD;isOutput=true]'$APP_VERSION_BUILD
+      displayName: Transfer variables to next stages
+      name: transfer_variables
 
 # - stage: deploy_heroku
 #   displayName: Build image and deploy to Heroku
