--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -268,66 +268,31 @@ stages:
       displayName: Transfer variables to next stages
       name: transfer_variables
 
-# - stage: deploy_heroku
-#   displayName: Build image and deploy to Heroku
-#   dependsOn: test
-#   condition: and(succeeded(), eq(variables['branchMasterChanged'], false))
-#   variables:
-#   - group: Release
-#   jobs:
-#   - job: build_deploy
-#     displayName: Build image and deploy
-#     steps:
-#     - task: GoTool@0
-#       displayName: Prepare Go env
-#       inputs:
-#         version: '$(goVersion)'
-#     - task: Go@0
-#       inputs:
-#         command: 'get'
-#         arguments: 'github.com/btnguyen2k/go-giter8/g8@v0.5.1'
-#       displayName: Install go-giter8
-#     - script: |
-#         g8 --version
-#         g8 new --no-inputs file://$(System.DefaultWorkingDirectory)
-#       displayName: Generate project from g8 template
-#       workingDirectory: $(sessionDirectory)
-#     - task: DockerInstaller@0
-#       displayName: Prepare Docker CLI
-#       inputs:
-#         dockerVersion: '$(dockerVersion)'
-#         releaseType: 'stable'
-#     - script: |
-#         APP_SHORTNAME=`jq -r '.shortname' $(projectDirectory)/appinfo.json`
-#         echo '##vso[task.setvariable variable=APP_SHORTNAME]'$APP_SHORTNAME
-#         APP_VERSION=`jq -r '.version' $(projectDirectory)/appinfo.json`
-#         BUILD_DATE=`date '+%Y%m%d'`
-#         APP_VERSION=${APP_VERSION}-b${BUILD_DATE}.$(Build.BuildId)
-#         echo '##vso[task.setvariable variable=APP_VERSION]'$APP_VERSION
-#         appInfo=`jq ".version=\"$APP_VERSION\"" $(projectDirectory)/appinfo.json`
-#         echo $appInfo > $(projectDirectory)/appinfo.json
-#         sed -i 's/{?HTTP_LISTEN_PORT}/{?PORT}/g' $(projectDirectory)/be-api/config/api.conf
-#         sed -i 's/{?DB_PGSQL_URL}/{?DATABASE_URL}/g' $(projectDirectory)/be-api/config/conf.d/api_gvabe.conf
-#       displayName: Init application info
-#     - task: Docker@2
-#       displayName: Build Docker image
-#       inputs:
-#         command: build
-#         buildContext: '$(projectDirectory)'
-#         repository: '$(APP_SHORTNAME)'
-#         dockerFile: '$(projectDirectory)/Dockerfile'
-#         tags: latest
-#     - script: |
-#         echo Logging in to $(herokuRegistry)...
-#         export HEROKU_API_KEY=$(HEROKU_TOKEN)
-#         echo $(HEROKU_TOKEN) | docker login -u _ --password-stdin $(herokuRegistry)
-#         docker tag $(APP_SHORTNAME) $(herokuRegistry)/$(herokuApp)/web
-#         docker images
-#         echo Pushing image...
-#         docker push $(herokuRegistry)/$(herokuApp)/web
-#         echo Releasing image...
-#         heroku container:release web -a $(herokuApp)
-#         echo Logging out...
-#         docker logout $(herokuRegistry)
-#         unset HEROKU_API_KEY
-#       displayName: Push and Deploy to Heroku
+- stage: deploy_demo
+  displayName: Deploy to demo site
+  dependsOn: build_dockerhub
+  variables:
+    APP_VERSION_BUILD: $[ stageDependencies.build_dockerhub.generate_build_publish.outputs['transfer_variables.APP_VERSION_BUILD'] ]
+  jobs:
+  - job: deploy_demo
+    displayName: Deploy to demo site
+    steps:
+    - script: |
+        echo '##vso[task.setvariable variable=dockerImageTag]$(APP_VERSION_BUILD)'
+      displayName: Set Docker image tag
+    - script: |
+        echo '##vso[task.setvariable variable=dockerImageTag]latest'
+      displayName: Set Docker image tag to latest if not specified
+      condition: eq(variables['APP_VERSION_BUILD'], '')                  
+    - task: AzureCLI@2
+      inputs:
+        azureSubscription: $(AzureSubscription)
+        scriptType: bash
+        scriptLocation: inlineScript
+        inlineScript: |
+          az config set extension.use_dynamic_install=yes_without_prompt
+          az containerapp update \
+            --name $(ContainerAppName) \
+            --resource-group $(ResourceGroupName) \
+            --container-name $(ContainerAppContainerName) \
+            --image docker.io/$(DockerRegistryAccount)/$(dockerHubRepoName):$(APP_VERSION_BUILD)
