--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -219,7 +219,7 @@ stages:
 - stage: build_dockerhub
   displayName: Build image and publish to Docker Hub
   dependsOn: test
-  condition: eq(variables['branchDemoBuildChanged'], true)
+  condition: and(succeeded(), eq(variables['branchDemoBuildChanged'], true))
   jobs:
   - job: generate_build_publish
     displayName: Generate project, build Docker image and publish
