ignore demo-build branch in GitHub Actions

--- a/.github/workflows/govueadmin.yaml
+++ b/.github/workflows/govueadmin.yaml
@@ -2,7 +2,7 @@ name: govueadmin
 
 on:
   push:
-    branches-ignore: [ 'azure-pipelines' ]
+    branches-ignore: [ 'azure-pipelines', 'demo-build' ]
   pull_request:
     branches: [ master ]
 
